# XHARPy

./: .gitignore  .readthedocs.yml  LICENSE  README.rst  cli.py  commit-671e177  conversion.py  environment.yml  gpaw_mbis_source.py  gpaw_mpi_source.py  gpaw_source.py  gpaw_source_lcorr.py  gpaw_spherical_source.py  hirshfeld_val  hirshfeld_val.py  iam_source.py  install.sh  io.py  paper.py  pyproject.toml  quality.py  real_spher_harm.py  requirements.txt  restraints.py  setup.py  weighting.py  xharpy.py  xharpy.yml  xharpy_ascii.txt
docs/: Makefile  computation_dict_to_rst.py  requirements_rtd.txt
docs/source/: commandline.rst  conf.py  examples.rst  index.rst  installation.rst  logo_source.txt  xharpy.f0j_sources.rho.rst  xharpy.f0j_sources.rst  xharpy.rst
examples/: README.rst  example_keywords.rst  example_library.rst
examples/CpNa_gpaw_special_position/: CpNa_gpaw_special_position.ipynb  iam.cif  iam.lst  xd.hkl
examples/HMa_8HQ_gpaw/: HMA_8HQ_gpaw.ipynb  iam.cif  iam.hkl  iam.lst
examples/HMa_Mg_gpaw/: HMA_Mg_gpaw.ipynb  iam.cif  iam.hkl  iam.lst
examples/L-Alanin_gpaw/: L-Ala_gpaw.ipynb  iam.hkl
examples/L-Alanin_iam/: L-Ala_iam.ipynb  Untitled.ipynb
examples/L-Alanin_iam_HConstraints/: L-Ala_iam_HConstraints.ipynb  iam.lst
examples/L-Alanin_nosphera2_orca/: L-Ala_nospa2_orca.ipynb  iam.res
examples/L-Alanin_qe/: L-Alanin_qe.ipynb  density.cube  iam.cif  iam.lst
examples/L-Alanin_tscexport_gpaw/: L-Ala_tscexport_gpaw.ipynb  iam.cif
examples/Urea_gpaw/: core.py  core_values.pic  iam.lst  step1.py  step1_values.pic  urea_gpaw.ipynb
examples/Urea_qe/: density.cube  gpaw.txt  iam.hkl  urea_qe.ipynb
examples/Urea_tscexport_qe_windows/: iam.cif  urea_tscexport_qe.ipynb
examples/Workshop_Erice/: Workshop.ipynb
examples/Xylitol_gpaw_extinction/: iam.cif  iam.hkl  iam.lst  xylitol_gpaw.ipynb
grid/: becke.py  periodicgrid.py  poisson.py
horton2-grids/: __init__.py
rho/: spherical_rho.pic
xharpy/: __init__.py  better_abc.py  cli.py  cli_tsc.py  common_jax.py  conversion.py  core.py  defaults.py  gpaw_mbis_source.py  gpaw_mpi_source.py  gpaw_source.py  gpaw_source_lcorr.py  gpaw_spherical_source.py  io.py  paper.py  qe_source.py  quality.py  refine.py  restraints.py  weighting.py  xharpy.py
xharpy/f0j_sources/: __init__.py  cubetools.py  custom_function_source.py  gpaw_lcorr_source.py  gpaw_mbis_source.py  gpaw_mpi_source.py  gpaw_source.py  gpaw_spherical_source.py  iam_source.py  nosphera2_orca_source.py  qe_source.py  (+2 more)
(+18 files in other folders)
