[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xharpy"
dynamic = ["version"]
description = "X-ray diffraction data Hirshfeld Atom Refinement in Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Paul Niklas Ruth", email = "panikruth@gmail.com"}
]
maintainers = [
    {name = "Paul Niklas Ruth", email = "panikruth@gmail.com"}
]
keywords = [
    "chemistry", 
    "crystallography", 
    "x-ray diffraction", 
    "refinement", 
    "hirshfeld"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.3",
    "scipy>=1.7.3",
    "pandas>=1.3.5",
    "jax>=0.2.26",
    "jaxlib>=0.1.75",
    "matplotlib>=3.5.1",
    "tqdm>=4.62.3",
]

[project.optional-dependencies]
gpaw = [
    "gpaw>=21.6.0",
    "ase>=3.22.1",
]
qe = [
    "qe>=7.0",
]
cctbx = [
    "cctbx>=2021.11",
]
dev = [
    "ruff>=0.1.0",
    "sphinx>=4.3.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Niolon/XHARPy"
"Bug Tracker" = "https://github.com/Niolon/XHARPy/issues"
"Documentation" = "https://xharpy.readthedocs.io/"

[tool.setuptools]
packages = ["xharpy"]

[tool.setuptools_scm]
write_to = "xharpy/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.ruff]
# Enable Pyflakes ('F'), pycodestyle ('E'), isort ('I') 
# and many more linters by default
# select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E741"]
line-length = 120
target-version = "py38"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"./xharpy/f0j_sources/cubetools.py" = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.isort]
known-first-party = ["xharpy"]